fasten-core/include/fasten_core.h

/* ── Opaque handle ─────────────────────────────────────────────────────────── */

/**
 * Opaque audit-store handle. Do not inspect or allocate directly.
 * Obtain one via fasten_store_open(); release via fasten_store_close().
 */
typedef struct FastenStore FastenStore;
/* ── Error codes ───────────────────────────────────────────────────────────── */

/**
 * Typed return codes from all fasten_store_* functions (except open/close/
 * free_str/version, which use pointer or void returns).
 *
 * Check `rc == FASTEN_OK` for success; any other value indicates an error
 * and *out_err (if non-NULL) contains a heap-allocated detail string.
 *
 * Discriminant values are stable across library versions; new variants will
 * only ever be added with new values, never by renumbering existing ones.
 */
typedef enum {
    FASTEN_OK            = 0,   /**< Operation succeeded.                      */
    FASTEN_ERR_BACKEND   = 1,   /**< SQLite or PostgreSQL backend error.        */
    FASTEN_ERR_BAD_TABLE = 2,   /**< Invalid table or schema name.              */
    FASTEN_ERR_BAD_JSON  = 3,   /**< JSON parse or schema validation error.     */
    FASTEN_ERR_NULL_ARG  = 4,   /**< Null pointer or invalid UTF-8 argument.   */
    FASTEN_ERR_BAD_BACKEND = 5, /**< Unknown backend string.                   */
    FASTEN_ERR_UNKNOWN   = 99   /**< Internal panic or unexpected error.        */
} FastenErrorCode;
/**
 * Close the store and release all associated resources.
 *
 * Safe to call with NULL. After this call the handle is invalid; do not
 * pass it to any other function.
 */
void fasten_store_close(FastenStore* store);
/* ── Memory management ─────────────────────────────────────────────────────── */

/**
 * Free a string returned by this library (error strings and JSON output
 * strings are both allocated by the same mechanism and freed here).
 *
 * Safe to call with NULL.
 */
void fasten_store_free_str(char* s);
/* ── Redaction ─────────────────────────────────────────────────────────────── */

/**
 * Redact a JSON value using the global default key-pattern + value-shape rules.
 *
 * Default key patterns (case-insensitive): api_key, password, token, secret,
 * authorization, bearer, m2m_key, private_key, access_key, session_id,
 * cookie, credential, and variants.
 *
 * Default value shapes: JWT, PEM private key, AWS key, GitHub token,
 * Stripe live key, OpenAI key, credit-card (Luhn-validated).
 *
 * @param in_json   NUL-terminated UTF-8 JSON (object, array, or scalar).
 * @param out_json  On success: set to heap-allocated redacted JSON.
 *                  Free with fasten_store_free_str(). May be NULL.
 * @param out_err   Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise (out_err set).
 */
FastenErrorCode fasten_redact(
    const char* in_json,
    char**      out_json,
    char**      out_err
);
/**
 * Redact a JSON value with fully-custom key patterns, replacement token, and
 * extra value-shape patterns.  Use this when fasten.init() is called with
 * extra_redact_keys or extra_value_redact_patterns.
 *
 * @param in_json                   NUL-terminated UTF-8 JSON.
 * @param extra_keys_json           Optional: JSON array of plain key strings,
 *                                  e.g. ["my_field","other_field"]. NULL = none.
 * @param replacement               Optional: replacement token. NULL = "***".
 * @param extra_value_patterns_json Optional: JSON array of objects:
 *                                  [{"pattern":"<regex>","replacement":"***X***"},...]
 *                                  Appended after built-in value patterns. NULL = none.
 * @param out_json                  On success: heap-allocated redacted JSON.
 *                                  Free with fasten_store_free_str(). May be NULL.
 * @param out_err                   Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise (out_err set).
 */
FastenErrorCode fasten_redact_full(
    const char* in_json,
    const char* extra_keys_json,
    const char* replacement,
    const char* extra_value_patterns_json,
    char**      out_json,
    char**      out_err
);
/* ── Code catalog ──────────────────────────────────────────────────────────── */

/**
 * Register a batch of audit codes for a domain.
 *
 * @param domain     NUL-terminated domain string (e.g. "user", "billing").
 * @param codes_json NUL-terminated UTF-8 JSON object:
 *   {
 *     "USER_CREATED": {
 *       "domain":"user","category":"auth","action":"create",
 *       "severity":"info","description":"...","emitter":"auth-svc"
 *     }
 *   }
 *   Optional fields: retention_class ("short"|"medium"|"long", default "medium"),
 *   high_volume (bool), pii_in_detail (bool, forces retention_class="short"),
 *   declared_unused (bool), detail_passthrough_keys ([str]).
 * @param out_err    Set on error; may be NULL.
 *
 * Error codes:
 *   FASTEN_ERR_INVALID_KEY    — code key is not UPPER_SNAKE_CASE
 *   FASTEN_ERR_ID_MISMATCH    — Meta.id disagrees with the dict key
 *   FASTEN_ERR_DOMAIN_MISMATCH — Meta.domain disagrees with domain argument
 *   FASTEN_ERR_DUPLICATE_CODE — code was already registered
 *
 * @return FASTEN_OK on success, error code otherwise (out_err set).
 */
FastenErrorCode fasten_register_codes(
    const char* domain,
    const char* codes_json,
    char**      out_err
);
/**
 * Look up a single code in the global registry.
 *
 * @param code      NUL-terminated code key (e.g. "USER_CREATED").
 * @param out_json  On success: heap-allocated UTF-8 JSON Meta object, or
 *                  "{}" if the code is not registered.
 *                  Free with fasten_store_free_str(). May be NULL.
 * @param out_err   Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_meta_of(
    const char* code,
    char**      out_json,
    char**      out_err
);
/**
 * Dump the entire registry as sorted `id,domain,severity` CSV, one code
 * per line.  Identical to the Python `fasten.codes.dump()` output.
 *
 * @param out_csv  On success: heap-allocated UTF-8 CSV string.
 *                 Free with fasten_store_free_str(). May be NULL.
 * @param out_err  Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_registry_dump(
    char** out_csv,
    char** out_err
);
/**
 * Clear the global registry.  Intended for test teardown and re-init.
 * Thread-safe.
 */
void fasten_registry_clear(void);
/* ── SDK-store callback bridge ─────────────────────────────────────────────── */

/**
 * Callback invoked by the drainer for each row insert.
 * `row_json` is valid only for the duration of the call.
 * Return 0 = success; any other value = error (drainer will retry).
 */
typedef int32_t (*FastenInsertCallbackFn)(const char* row_json, void* userdata);
/**
 * Create a store handle backed by a C insert callback.
 *
 * Use this to bridge an SDK-owned store into the fasten drainer without
 * migrating the store to fasten_store_open().  Always returns a non-null handle.
 *
 * @param fn       Insert callback; must be non-null.
 * @param userdata Passed to every `fn` invocation unchanged.
 * @param out_err  Reserved; currently always succeeds.
 */
FastenStore* fasten_store_from_callback(
    FastenInsertCallbackFn fn,
    void*                  userdata,
    char**                 out_err
);
/* ── Drainer ───────────────────────────────────────────────────────────────── */

/**
 * Attach a background-drain queue to an existing store handle.
 *
 * Must be called before fasten_drainer_enqueue. The drainer shares the
 * store already held by `store`. Re-calling replaces any existing drainer
 * (previous pending rows are flushed with a 2-second timeout first).
 *
 * @param store            Non-null handle returned by fasten_store_open().
 * @param capacity         Max queued + in-flight slots (0 = default 100).
 * @param retry_initial_ms First backoff window ms (0 = default 100).
 * @param retry_max_ms     Backoff ceiling ms (0 = default 60 000).
 * @param retry_jitter     Non-zero = apply ±20% uniform jitter.
 * @param max_attempts     Dead-letter threshold (0 = default 50).
 * @param out_err          Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_drainer_install(
    FastenStore* store,
    uint64_t     capacity,
    uint64_t     retry_initial_ms,
    uint64_t     retry_max_ms,
    int          retry_jitter,
    uint32_t     max_attempts,
    char**       out_err
);
/**
 * Enqueue a row JSON for asynchronous insertion.
 *
 * Blocks under back-pressure (queue full + store slow). Returns
 * FASTEN_ERR_NULL_ARG when no drainer is installed.
 *
 * @param store    Non-null handle.
 * @param row_json UTF-8 JSON object matching the fasten wire schema.
 * @param out_err  Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_drainer_enqueue(
    FastenStore* store,
    const char*  row_json,
    char**       out_err
);
/**
 * Block until all currently-queued rows have drained, or `timeout_ms` elapses.
 *
 * @param store            Non-null handle.
 * @param timeout_ms       Maximum wait time; 0 = wait indefinitely.
 * @param out_fully_drained Set to 1 if fully drained, 0 if timed out. May be NULL.
 * @param out_err          Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_drainer_flush(
    FastenStore* store,
    uint64_t     timeout_ms,
    int*         out_fully_drained,
    char**       out_err
);
/**
 * Return queue stats as a JSON object string.
 *
 * Returns "null" when no drainer is installed. Free the result with
 * fasten_store_free_str().
 *
 * @param store    Non-null handle.
 * @param out_json On success: heap-allocated UTF-8 JSON stats object.
 * @param out_err  Set on error; may be NULL.
 *
 * @return FASTEN_OK on success, error code otherwise.
 */
FastenErrorCode fasten_drainer_stats_json(
    FastenStore* store,
    char**       out_json,
    char**       out_err
);
/**
 * Shut down the drainer: signal the background thread to stop and
 * perform a best-effort drain (2-second timeout). Safe to call with NULL
 * or when no drainer is installed.
 */
void fasten_drainer_close(FastenStore* store);